// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TogglePasswordWidget should render toggle password with type password 1`] = `
<div
  className="btn-group"
>
  <PasswordWidget
    type="password"
    value="foo-1"
  />
  <Action
    bsStyle={undefined}
    icon="talend-locked"
    label=""
    onClick={[Function]}
  >
    <i
      className="talend-locked"
    />
    
  </Action>
</div>
`;

exports[`TogglePasswordWidget should render toggle password with type text 1`] = `
<div
  className="btn-group"
>
  <PasswordWidget
    type="text"
    value="foo-2"
  />
  <Action
    bsStyle={undefined}
    icon="talend-unlocked"
    label=""
    onClick={[Function]}
  >
    <i
      className="talend-unlocked"
    />
    
  </Action>
</div>
`;
